# Moka

./: BusinessApi.ipynb  CopyWriter.ipynb  Dall-E.ipynb  README.md  app.py  image-to-text.py  pyproject.toml  ref.txt  test.ipynb  tox.ini
mealplanner/: Mealplanner.ipynb
notebooks/: attention_tutorial.ipynb
notebooks/Building-Systems-with-the_ChatGPT-API/: 1 - Language Models, the Chat Format and Tokens.ipynb  2 - Classification.ipynb  3 - Moderation.ipynb  4 - Chain of Thoughts.ipynb  5 - Chaining Prompts.ipynb  6 - Check Outputs.ipynb  7 - Build an End-to-End System.ipynb  utils.py
notebooks/transformer/: C4W2_Assignment.ipynb
reference/: comm_chart.json
slack-copywriter/: app.py
slack-copywriter/notebooks/: CopyWriter.ipynb
slack-copywriter/reference/: comm_chart.json  ref.txt
slack-copywriter/src/: openaifuncs.py  prompts.py
slack-copywriter/static/: main.css
slack-copywriter/templates/: index.html  results.html
src/: utils.py
static/: main.css
templates/: index.html
