[tool.poetry]
name = "moka"
version = "0.1.0"
description = ""
authors = ["Giovanni Bruner"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.2"
flask = "^2.3.2"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
tox = "^4.6.0"
black = "^23.3.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
